--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechVision - Solutions Digitales</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     
@@ -12,11 +12,31 @@
          HEADER - À compléter par l'élève A
          ======================================== -->
     <header class="header">
-        <div class="container">
-            <nav class="navbar">
-                <!-- NAV ICI -->
-            </nav>
-        </div>
+        <nav class="navbar">
+            <div class="nav-container">
+                <a href="#" class="nav-logo">TechVision</a>
+                <input type="checkbox" id="nav-toggle" class="nav-toggle">
+                <label for="nav-toggle" class="nav-toggle-label">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </label>
+                <ul class="nav-menu">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link active">Accueil</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">À propos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
     </header>
 
     <!-- ========================================
@@ -103,6 +123,5 @@
     <footer class="footer">
         <!-- FOOTER ICI -->
     </footer>
-
 </body>
 </html>
