--- a/index.html
+++ b/index.html
@@ -1,108 +1,140 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TechVision - Solutions Digitales</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
     <!-- ========================================
          HEADER - À compléter par l'élève A
          ======================================== -->
     <header class="header">
-        <div class="container">
-            <nav class="navbar">
-                <!-- NAV ICI -->
-            </nav>
+      <nav class="navbar">
+        <div class="nav-container">
+          <a href="index.html" class="nav-logo">TechVision</a>
+          <input type="checkbox" id="nav-toggle" class="nav-toggle" />
+          <label for="nav-toggle" class="nav-toggle-label">
+            <span></span>
+            <span></span>
+            <span></span>
+          </label>
+          <ul class="nav-menu">
+            <li class="nav-item">
+              <a href="index.html" class="nav-link active">Accueil</a>
+            </li>
+            <li class="nav-item">
+              <a href="services.html" class="nav-link">Services</a>
+            </li>
+            <li class="nav-item">
+              <a href="about.html" class="nav-link">À propos</a>
+            </li>
+            <li class="nav-item">
+              <a href="contact.html" class="nav-link">Contact</a>
+            </li>
+          </ul>
         </div>
+      </nav>
     </header>
 
     <!-- ========================================
          HERO SECTION - Section principale
          ======================================== -->
     <section class="hero">
-        <div class="container">
-            <div class="hero-content">
-                <!-- HERO ICI -->
-            </div>
+      <div class="container">
+        <div class="hero-content">
+          <!-- HERO ICI -->
         </div>
+      </div>
     </section>
 
     <!-- ========================================
          SECTION SERVICES - Cards à 3 colonnes
          ======================================== -->
     <section class="services">
-        <div class="container">
-            <h2 class="section-title">Nos Services</h2>
-            <p class="section-subtitle">Des solutions adaptées à tous vos besoins</p>
-            
-            <div class="cards-grid">
-                <!-- Card 1 -->
-                <div class="card">
-                    <h3 class="card-title">Développement Web</h3>
-                    <p class="card-text">Création de sites web modernes et performants, adaptés à vos besoins spécifiques.</p>
-                    <a href="#" class="card-link">En savoir plus →</a>
-                </div>
+      <div class="container">
+        <h2 class="section-title">Nos Services</h2>
+        <p class="section-subtitle">
+          Des solutions adaptées à tous vos besoins
+        </p>
 
-                <!-- Card 2 -->
-                <div class="card">
-                    <h3 class="card-title">Applications Mobile</h3>
-                    <p class="card-text">Développement d'applications iOS et Android pour toucher vos clients partout.</p>
-                    <a href="#" class="card-link">En savoir plus →</a>
-                </div>
+        <div class="cards-grid">
+          <!-- Card 1 -->
+          <div class="card">
+            <h3 class="card-title">Développement Web</h3>
+            <p class="card-text">
+              Création de sites web modernes et performants, adaptés à vos
+              besoins spécifiques.
+            </p>
+            <a href="#" class="card-link">En savoir plus →</a>
+          </div>
 
-                <!-- Card 3 -->
-                <div class="card">
-                    <h3 class="card-title">Solutions Cloud</h3>
-                    <p class="card-text">Migration et hébergement de vos données dans le cloud en toute sécurité.</p>
-                    <a href="#" class="card-link">En savoir plus →</a>
-                </div>
+          <!-- Card 2 -->
+          <div class="card">
+            <h3 class="card-title">Applications Mobile</h3>
+            <p class="card-text">
+              Développement d'applications iOS et Android pour toucher vos
+              clients partout.
+            </p>
+            <a href="#" class="card-link">En savoir plus →</a>
+          </div>
 
-                <!-- Card 4 -->
-                <div class="card">
-                    <h3 class="card-title">Cybersécurité</h3>
-                    <p class="card-text">Protection de vos données et systèmes contre les cybermenaces.</p>
-                    <a href="#" class="card-link">En savoir plus →</a>
-                </div>
+          <!-- Card 3 -->
+          <div class="card">
+            <h3 class="card-title">Solutions Cloud</h3>
+            <p class="card-text">
+              Migration et hébergement de vos données dans le cloud en toute
+              sécurité.
+            </p>
+            <a href="#" class="card-link">En savoir plus →</a>
+          </div>
 
-                <!-- Card 5 -->
-                <div class="card">
-                    <h3 class="card-title">Data Analytics</h3>
-                    <p class="card-text">Analyse de vos données pour prendre des décisions éclairées.</p>
-                    <a href="#" class="card-link">En savoir plus →</a>
-                </div>
+          <!-- Card 4 -->
+          <div class="card">
+            <h3 class="card-title">Cybersécurité</h3>
+            <p class="card-text">
+              Protection de vos données et systèmes contre les cybermenaces.
+            </p>
+            <a href="#" class="card-link">En savoir plus →</a>
+          </div>
 
-                <!-- Card 6 -->
-                <div class="card">
-                    <h3 class="card-title">Design UX/UI</h3>
-                    <p class="card-text">Création d'interfaces utilisateur intuitives et élégantes.</p>
-                    <a href="#" class="card-link">En savoir plus →</a>
-                </div>
-            </div>
+          <!-- Card 5 -->
+          <div class="card">
+            <h3 class="card-title">Data Analytics</h3>
+            <p class="card-text">
+              Analyse de vos données pour prendre des décisions éclairées.
+            </p>
+            <a href="#" class="card-link">En savoir plus →</a>
+          </div>
+
+          <!-- Card 6 -->
+          <div class="card">
+            <h3 class="card-title">Design UX/UI</h3>
+            <p class="card-text">
+              Création d'interfaces utilisateur intuitives et élégantes.
+            </p>
+            <a href="#" class="card-link">En savoir plus →</a>
+          </div>
         </div>
+      </div>
     </section>
 
     <!-- ========================================
          SECTION À PROPOS - Texte + Stats
          ======================================== -->
-    <section class="about-preview">
-    </section>
+    <section class="about-preview"></section>
 
     <!-- ========================================
          SECTION TÉMOIGNAGES - Cards horizontales
          ======================================== -->
-    <section class="testimonials">
-    </section>
-
+    <section class="testimonials"></section>
 
     <!-- ========================================
          FOOTER - À compléter par l'élève B
          ======================================== -->
     <footer class="footer">
-        <!-- FOOTER ICI -->
+      <!-- FOOTER ICI -->
     </footer>
-
-</body>
+  </body>
 </html>
