--- a/index.html
+++ b/index.html
@@ -135,7 +135,50 @@
          FOOTER - À compléter par l'élève B
          ======================================== -->
     <footer class="footer">
-      <!-- FOOTER ICI -->
+      <div class="footer-container">
+        <div class="footer-section">
+          <a href="index.html" class="footer-logo">TechVision</a>
+          <p class="footer-text">
+            Solutions digitales innovantes pour transformer votre entreprise.
+            Nous accompagnons votre croissance avec des technologies de pointe.
+          </p>
+        </div>
+
+        <div class="footer-section">
+          <h3 class="footer-title">Navigation</h3>
+          <ul class="footer-links">
+            <li><a href="index.html" class="footer-link">Accueil</a></li>
+            <li><a href="services.html" class="footer-link">Services</a></li>
+            <li><a href="about.html" class="footer-link">À propos</a></li>
+            <li><a href="contact.html" class="footer-link">Contact</a></li>
+          </ul>
+        </div>
+
+        <div class="footer-section">
+          <h3 class="footer-title">Contact</h3>
+          <p class="footer-text">
+            Email: contact@techvision.fr<br />
+            Téléphone: +33 1 23 45 67 89<br />
+            Adresse: 123 Rue de la Tech, 75001 Paris
+          </p>
+        </div>
+
+        <div class="footer-section">
+          <h3 class="footer-title">Suivez-nous</h3>
+          <div class="footer-social">
+            <a href="#" class="footer-social-link" aria-label="Facebook">f</a>
+            <a href="#" class="footer-social-link" aria-label="Twitter">t</a>
+            <a href="#" class="footer-social-link" aria-label="LinkedIn">in</a>
+            <a href="#" class="footer-social-link" aria-label="Instagram">ig</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="footer-bottom">
+        <p class="footer-bottom-text">
+          &copy; 2026 TechVision. Tous droits réservés.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
