--- a/index.html
+++ b/index.html
@@ -104,61 +104,108 @@
 
         <div class="cards-grid">
           <!-- Card 1 -->
-          <div class="card">
-            <h3 class="card-title">Développement Web</h3>
-            <p class="card-text">
-              Création de sites web modernes et performants, adaptés à vos
-              besoins spécifiques.
-            </p>
-            <a href="#" class="card-link">En savoir plus →</a>
+          <div class="parent">
+            <div class="card">
+              <div class="date-box">
+                <span class="month">WEB</span>
+                <span class="date">01</span>
+              </div>
+              <div class="content-box">
+                <h3 class="card-title">Développement Web</h3>
+                <p class="card-content">
+                  Création de sites web modernes et performants, adaptés à vos
+                  besoins spécifiques.
+                </p>
+                <a href="#" class="see-more">En savoir plus</a>
+              </div>
+            </div>
           </div>
 
           <!-- Card 2 -->
-          <div class="card">
-            <h3 class="card-title">Applications Mobile</h3>
-            <p class="card-text">
-              Développement d'applications iOS et Android pour toucher vos
-              clients partout.
-            </p>
-            <a href="#" class="card-link">En savoir plus →</a>
+          <div class="parent">
+            <div class="card">
+              <div class="date-box">
+                <span class="month">APP</span>
+                <span class="date">02</span>
+              </div>
+              <div class="content-box">
+                <h3 class="card-title">Applications Mobile</h3>
+                <p class="card-content">
+                  Développement d'applications iOS et Android pour toucher vos
+                  clients partout.
+                </p>
+                <a href="#" class="see-more">En savoir plus</a>
+              </div>
+            </div>
           </div>
 
           <!-- Card 3 -->
-          <div class="card">
-            <h3 class="card-title">Solutions Cloud</h3>
-            <p class="card-text">
-              Migration et hébergement de vos données dans le cloud en toute
-              sécurité.
-            </p>
-            <a href="#" class="card-link">En savoir plus →</a>
+          <div class="parent">
+            <div class="card">
+              <div class="date-box">
+                <span class="month">CLD</span>
+                <span class="date">03</span>
+              </div>
+              <div class="content-box">
+                <h3 class="card-title">Solutions Cloud</h3>
+                <p class="card-content">
+                  Migration et hébergement de vos données dans le cloud en toute
+                  sécurité.
+                </p>
+                <a href="#" class="see-more">En savoir plus</a>
+              </div>
+            </div>
           </div>
 
           <!-- Card 4 -->
-          <div class="card">
-            <h3 class="card-title">Cybersécurité</h3>
-            <p class="card-text">
-              Protection de vos données et systèmes contre les cybermenaces.
-            </p>
-
-            <a href="#" class="card-link">En savoir plus →</a>
+          <div class="parent">
+            <div class="card">
+              <div class="date-box">
+                <span class="month">SEC</span>
+                <span class="date">04</span>
+              </div>
+              <div class="content-box">
+                <h3 class="card-title">Cybersécurité</h3>
+                <p class="card-content">
+                  Protection de vos données et systèmes contre les cybermenaces.
+                </p>
+                <a href="#" class="see-more">En savoir plus</a>
+              </div>
+            </div>
           </div>
 
           <!-- Card 5 -->
-          <div class="card">
-            <h3 class="card-title">Data Analytics</h3>
-            <p class="card-text">
-              Analyse de vos données pour prendre des décisions éclairées.
-            </p>
-            <a href="#" class="card-link">En savoir plus →</a>
+          <div class="parent">
+            <div class="card">
+              <div class="date-box">
+                <span class="month">DAT</span>
+                <span class="date">05</span>
+              </div>
+              <div class="content-box">
+                <h3 class="card-title">Data Analytics</h3>
+                <p class="card-content">
+                  Analyse de vos données pour prendre des décisions éclairées.
+                </p>
+                <a href="#" class="see-more">En savoir plus</a>
+              </div>
+            </div>
           </div>
 
           <!-- Card 6 -->
-          <div class="card">
-            <h3 class="card-title">Design UX/UI</h3>
-            <p class="card-text">
-              Création d'interfaces utilisateur intuitives et élégantes.
-            </p>
-            <a href="#" class="card-link">En savoir plus →</a>
+          <div class="parent">
+            <div class="card">
+              <div class="date-box">
+                <span class="month">DSN</span>
+                <span class="date">06</span>
+              </div>
+              <div class="content-box">
+                <h3 class="card-title">Design UX/UI</h3>
+                <p class="card-content">
+                  Création d'interfaces utilisateur intuitives et élégantes.
+                </p>
+                <a href="#" class="see-more">En savoir plus</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
