cantenu de pages

--- a/about.html
+++ b/about.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>À propos - TechVision</title>
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>  
+    <link rel="stylesheet" href="./css/style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  </head>
+  <body>  
     <!-- ========================================
          HEADER - À compléter par l'élève A
          ======================================== -->
@@ -39,8 +40,103 @@
       </nav>
     </header>
 
+    <!-- Page Hero -->
+    <section class="page-hero">
+      <div class="page-hero-content">
+        <h1 class="page-hero-title">À propos de TechVision</h1>
+        <p class="page-hero-subtitle">Une équipe passionnée par l’innovation et la réussite de vos projets</p>
+      </div>
+    </section>
+
+    <!-- Qui sommes-nous -->
+    <section class="about-intro">
+      <div class="container">
+        <div class="about-intro-grid">
+          <div class="about-intro-text">
+            <h2 class="section-title">Qui sommes-nous ?</h2>
+            <p class="about-lead">TechVision accompagne les entreprises dans leur transformation digitale depuis plus de 10 ans.</p>
+            <p>Nous concevons des solutions sur mesure — sites web, applications, cloud et data — en plaçant l’utilisateur et la performance au cœur de chaque projet. Notre équipe réunit développeurs, designers et experts métier pour livrer des produits fiables et évolutifs.</p>
+            <p>Que vous soyez une startup, une PME ou un grand groupe, nous adaptons nos méthodes et nos technologies à vos enjeux.</p>
+          </div>
+          <div class="about-intro-visual">
+            <div class="about-card-uiverse">
+              <div class="about-card-inner">
+                <span class="about-card-icon">◆</span>
+                <h3>Innovation & Qualité</h3>
+                <p>Technologies de pointe et bonnes pratiques au quotidien.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Stats - style uiverse -->
+    <section class="about-stats">
+      <div class="container">
+        <div class="stats-grid">
+          <div class="stat-item">
+            <div class="stat-number" data-target="150">0</div>
+            <span class="stat-label">Projets livrés</span>
+          </div>
+          <div class="stat-item">
+            <div class="stat-number" data-target="12">0</div>
+            <span class="stat-label">Années d'expérience</span>
+          </div>
+          <div class="stat-item">
+            <div class="stat-number" data-target="98">0</div>
+            <span class="stat-label">% clients satisfaits</span>
+          </div>
+          <div class="stat-item">
+            <div class="stat-number" data-target="25">0</div>
+            <span class="stat-label">Experts dans l'équipe</span>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Valeurs - cards style uiverse -->
+    <section class="about-values services">
+      <div class="container">
+        <h2 class="section-title">Nos valeurs</h2>
+        <p class="section-subtitle">Ce qui nous guide au quotidien</p>
+        <div class="cards-grid">
+          <div class="parent">
+            <div class="card">
+              <div class="date-box"><span class="month">V1</span><span class="date">01</span></div>
+              <div class="content-box">
+                <h3 class="card-title">Excellence</h3>
+                <p class="card-content">Code propre, design soigné et livraisons dans les temps.</p>
+                <a href="#" class="see-more">Découvrir</a>
+              </div>
+            </div>
+          </div>
+          <div class="parent">
+            <div class="card">
+              <div class="date-box"><span class="month">V2</span><span class="date">02</span></div>
+              <div class="content-box">
+                <h3 class="card-title">Proximité</h3>
+                <p class="card-content">Écoute et réactivité pour des projets alignés avec vos objectifs.</p>
+                <a href="#" class="see-more">Découvrir</a>
+              </div>
+            </div>
+          </div>
+          <div class="parent">
+            <div class="card">
+              <div class="date-box"><span class="month">V3</span><span class="date">03</span></div>
+              <div class="content-box">
+                <h3 class="card-title">Innovation</h3>
+                <p class="card-content">Veille technologique et solutions modernes pour rester ahead.</p>
+                <a href="#" class="see-more">Découvrir</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- ========================================
-         FOOTER - À compléter par l'élève B
+         FOOTER
          ======================================== -->
     <footer class="footer">
       <div class="footer-container">
@@ -88,5 +184,6 @@
         </p>
       </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
