--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact - TechVision</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
   <body>
     <!-- ========================================
@@ -38,8 +39,72 @@
       </nav>
     </header>
 
+    <!-- Page Hero -->
+    <section class="page-hero">
+      <div class="page-hero-content">
+        <h1 class="page-hero-title">Contact</h1>
+        <p class="page-hero-subtitle">Parlons de votre projet — nous vous répondons sous 24h</p>
+      </div>
+    </section>
+
+    <!-- Formulaire + Infos - style uiverse -->
+    <section class="contact-section">
+      <div class="container">
+        <div class="contact-grid">
+          <div class="contact-form-wrapper">
+            <h2 class="section-title">Envoyez-nous un message</h2>
+            <form class="contact-form uiverse-form" action="#" method="post">
+              <div class="form-group-uiverse">
+                <input type="text" id="name" name="name" required placeholder=" ">
+                <label for="name">Nom complet</label>
+              </div>
+              <div class="form-group-uiverse">
+                <input type="email" id="email" name="email" required placeholder=" ">
+                <label for="email">Email</label>
+              </div>
+              <div class="form-group-uiverse">
+                <input type="text" id="subject" name="subject" placeholder=" ">
+                <label for="subject">Sujet</label>
+              </div>
+              <div class="form-group-uiverse form-group-textarea">
+                <textarea id="message" name="message" rows="4" required placeholder=" "></textarea>
+                <label for="message">Message</label>
+              </div>
+              <button type="submit" class="btn-uiverse">Envoyer</button>
+            </form>
+          </div>
+          <div class="contact-info">
+            <h2 class="section-title">Nos coordonnées</h2>
+            <div class="contact-info-card">
+              <div class="contact-info-item">
+                <span class="contact-info-icon">✉</span>
+                <div>
+                  <strong>Email</strong>
+                  <p>contact@techvision.fr</p>
+                </div>
+              </div>
+              <div class="contact-info-item">
+                <span class="contact-info-icon">☎</span>
+                <div>
+                  <strong>Téléphone</strong>
+                  <p>+33 1 23 45 67 89</p>
+                </div>
+              </div>
+              <div class="contact-info-item">
+                <span class="contact-info-icon">📍</span>
+                <div>
+                  <strong>Adresse</strong>
+                  <p>123 Rue de la Tech, 75001 Paris</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- ========================================
-         FOOTER - À compléter par l'élève B
+         FOOTER
          ======================================== -->
     <footer class="footer">
       <div class="footer-container">
