--- a/services.html
+++ b/services.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nos Services - TechVision</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
 
   <body>
@@ -39,8 +40,88 @@
       </nav>
     </header>
 
+    <!-- Page Hero -->
+    <section class="page-hero">
+      <div class="page-hero-content">
+        <h1 class="page-hero-title">Nos Services</h1>
+        <p class="page-hero-subtitle">Des solutions digitales sur mesure pour transformer votre activité</p>
+      </div>
+    </section>
+
+    <!-- Section Services - Cards style uiverse -->
+    <section class="services">
+      <div class="container">
+        <p class="section-subtitle">
+          Développement web, mobile, cloud, cybersécurité, data et design — nous couvrons tout le spectre du digital.
+        </p>
+
+        <div class="cards-grid">
+          <div class="parent">
+            <div class="card">
+              <div class="date-box"><span class="month">WEB</span><span class="date">01</span></div>
+              <div class="content-box">
+                <h3 class="card-title">Développement Web</h3>
+                <p class="card-content">Sites vitrines, e-commerce, applications web sur mesure. Technologies modernes et performances optimales.</p>
+                <a href="#" class="see-more">En savoir plus</a>
+              </div>
+            </div>
+          </div>
+          <div class="parent">
+            <div class="card">
+              <div class="date-box"><span class="month">APP</span><span class="date">02</span></div>
+              <div class="content-box">
+                <h3 class="card-title">Applications Mobile</h3>
+                <p class="card-content">Apps iOS et Android natives ou cross-platform. UX soignée et déploiement sur les stores.</p>
+                <a href="#" class="see-more">En savoir plus</a>
+              </div>
+            </div>
+          </div>
+          <div class="parent">
+            <div class="card">
+              <div class="date-box"><span class="month">CLD</span><span class="date">03</span></div>
+              <div class="content-box">
+                <h3 class="card-title">Solutions Cloud</h3>
+                <p class="card-content">Migration, hébergement et architecture cloud. Sécurité, scalabilité et coûts maîtrisés.</p>
+                <a href="#" class="see-more">En savoir plus</a>
+              </div>
+            </div>
+          </div>
+          <div class="parent">
+            <div class="card">
+              <div class="date-box"><span class="month">SEC</span><span class="date">04</span></div>
+              <div class="content-box">
+                <h3 class="card-title">Cybersécurité</h3>
+                <p class="card-content">Audits, conformité RGPD, protection des données et formation des équipes.</p>
+                <a href="#" class="see-more">En savoir plus</a>
+              </div>
+            </div>
+          </div>
+          <div class="parent">
+            <div class="card">
+              <div class="date-box"><span class="month">DAT</span><span class="date">05</span></div>
+              <div class="content-box">
+                <h3 class="card-title">Data Analytics</h3>
+                <p class="card-content">Tableaux de bord, reporting et aide à la décision basée sur vos données.</p>
+                <a href="#" class="see-more">En savoir plus</a>
+              </div>
+            </div>
+          </div>
+          <div class="parent">
+            <div class="card">
+              <div class="date-box"><span class="month">DSN</span><span class="date">06</span></div>
+              <div class="content-box">
+                <h3 class="card-title">Design UX/UI</h3>
+                <p class="card-content">Interfaces utilisateur claires et attractives. Recherche UX et design systems.</p>
+                <a href="#" class="see-more">En savoir plus</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- ========================================
-         FOOTER - À compléter par l'élève B
+         FOOTER
          ======================================== -->
     <footer class="footer">
       <div class="footer-container">
@@ -88,5 +169,6 @@
         </p>
       </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
